JEKT-136❇️ New     - Dataset        - DS_SAP_ATL_VBAP
🔁 Modified
    - Pipeline
       - SAP_01_MD_SLS_ORDR_LINE_ATL

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1632,7 +1632,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-17 14:03:51'
-    modifiedAt: '2023-04-17 15:08:05'
+    modifiedAt: '2023-04-19 10:28:49'
     datasets:
       inputs:
       - datasets/DS_SAP_01_TVAGT
@@ -1646,7 +1646,7 @@ pipelines:
       - datasets/DS_SAP_02_TVST
       - datasets/DS_SAP_02_VBAK
       - datasets/DS_SAP_02_VBKD
-      - datasets/DS_SAP_P01_VBAP
+      - datasets/DS_SAP_ATL_VBAP
       - datasets/DS_SAP_TVM4T_HCS
       outputs:
       - datasets/MD_SLS_ORDR_LINE
@@ -7997,6 +7997,21 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-04-18 12:48:16'
         modifiedAt: '2023-04-18 12:48:16'
+  datasets/DS_SAP_ATL_VBAP:
+    name: DS_SAP_ATL_VBAP
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-19 10:24:35'
+    modifiedAt: '2023-04-19 10:25:48'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-19 10:24:35'
+        modifiedAt: '2023-04-19 10:24:35'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
