JEKT-296 🔁 Modified     - Job        - JOB_MD_PO_HIST

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -5670,13 +5670,14 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/DART_L1_Purchase_Order_MD_PO_HIST
+    - pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: null
     createdAt: '2023-04-19 05:06:58'
-    modifiedAt: '2023-04-19 05:13:29'
+    modifiedAt: '2023-04-19 10:40:27'
     author: jcacere7@its.jnj.com
 functions:
   author: null
