--- a/src/datasets/MD_PO_HIST/pbt_aspects.yml
+++ b/src/datasets/MD_PO_HIST/pbt_aspects.yml
@@ -25,20 +25,36 @@ schema:
       tags: []
   - name: EV_TYPE_CO
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PO_SEQ_NBR
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MATL_MVMT_YR
-    type: integer
+    type:
+      type: struct
+      fields:
+      - name: col1
+        type: string
+        nullable: true
+        metadata:
+          description: ''
+          mappings: []
+          tags: []
+      - name: col2
+        type: string
+        nullable: false
+        metadata:
+          description: ''
+          mappings: []
+          tags: []
     nullable: true
     metadata:
       description: ''
@@ -46,14 +62,14 @@ schema:
       tags: []
   - name: MATL_MVMT_NUM
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MATL_MVMT_SEQ_NBR
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -73,7 +89,23 @@ schema:
       mappings: []
       tags: []
   - name: PSTNG_DTTM
-    type: timestamp
+    type:
+      type: struct
+      fields:
+      - name: col1
+        type: string
+        nullable: true
+        metadata:
+          description: ''
+          mappings: []
+          tags: []
+      - name: col2
+        type: string
+        nullable: false
+        metadata:
+          description: ''
+          mappings: []
+          tags: []
     nullable: true
     metadata:
       description: ''
@@ -108,21 +140,21 @@ schema:
       mappings: []
       tags: []
   - name: MVMT_TYPE
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_IN_PRCH_ORDR_PRC_UNIT
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: AMT_IN_LCL_CRNCY1
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -136,42 +168,42 @@ schema:
       mappings: []
       tags: []
   - name: GR_IR_ACCT_CLRNG_VAL_IN_LCL_CRNCY
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: GOODS_RCPT_BLOK_STK_IN_OU
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_IN_GR_BLOK_STK
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DEBIT_OR_CREDIT_IN
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: VALUT_TYPE
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV_CMPLT_IN
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -185,91 +217,98 @@ schema:
       mappings: []
       tags: []
   - name: FISC_YR_OF_A_REF_DOC
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DOC_NUM_OF_A_REF_DOC
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ITM_OF_A_REF_DOC
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RSN_FOR_MVMT
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ACTG_DOC_ENT_DTTM
-    type: timestamp
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: INVC_VAL_ENT
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CMPLI_WTH_SHIPPING_INSTR
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: INVC_VAL_IN_FRGN_CRNCY
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RVSL_OF_GR_ALLW
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SEQ_NUM_OF_SUP_CNFRM
-    type: string
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: NUM_OF_DOC_COND
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: TAX_ON_SLS_PRCH_CD
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: TAX_RPTG_CTRY_REGN
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_IN_UOM_FROM_DELV_NOTE
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -283,364 +322,343 @@ schema:
       mappings: []
       tags: []
   - name: MATL_NUM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CLRNG_VAL_ON_GR_IR_CLRNG_ACCT
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: LCL_CRNCY_KEY
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY1
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: BTCH_NUM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DOC_DTTM
-    type: timestamp
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CALC_OF_VAL_OPEN
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: UNPLAN_ACCT_ASGNMT
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: NM_OF_PRSN_RESP_FOR_CREAT_OBJ
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CHAR_VAL_1
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CHAR_VAL_2
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CHAR_VAL_3
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY3
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: FSHN_Theme
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: FSHN_CLCT
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SEASN
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SEASN_YR
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DPRE_CMPLT_FL
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: VAL_GOODS_RCPT_BLOK_STK
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: TYPE_OF_PAREL_UNIT_OF_MEAS
-    type: string
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: GOODS_RCPT_BLOK_STK
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_IN_PAREL_UNIT_OF_MEAS
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PCDR_FOR_UPDT_SCHED_LINE_QTY
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: LOGL_SYS
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: UOM_FROM_SRVC_ENT_SHT
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: STK_SGMNT
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV_ITM
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ORIG_OF_AN_INVC_ITM
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: EXCH_RT
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: MLT_ACCT_ASGNMT
-    type: string
-    nullable: false
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PSTD_SCTY_RETN_AMT
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PSTD_RETN_AMT_IN_DOC_CRNCY
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RETN_AMT_IN_CO_CD_CRNCY
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RETN_AMT_IN_DOC_CRNCY
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: EXCH_RT_DIFF_AMT
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: GR_IR_ACCT_CLRNG_VAL_LCL_CRNCY
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ACC_AT_ORIG
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_IN_VALUT_GR_BLOK_STK
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: VALUT_GOODS_RCPT_BLOK_STK
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: AMT_IN_DOC_CRNCY
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: AMT_IN_LCL_CRNCY
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_IN_PO_PRC_UNIT
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY2
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SAP_RLSE
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: INVC_AMT_IN_PO_CRNCY
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CLRNG_VAL_ON_GR_IR_ACCT
-    type: decimal(18,4)
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RTRN_IN
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: NUM_OF_PO_ACCT_ASGNMT
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: LINE_NUM_OF_SRVC
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PKG_NUM_OF_SRVC
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SRVC_NUM
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -681,21 +699,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
-    type: string
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: _pk_
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: NUM_OF_THE_DOC_COND
     type: string
     nullable: true
     metadata:
