--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -889,14 +889,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE:
-    name: JDE_MD_PO_HIST
+    name: JDE_MD_PO_HIST_BW2_DEU_GMD_JEM_JES_JET_JSW_SJD
     description: ''
     author: jcacere7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-17 03:03:30'
-    modifiedAt: '2023-04-17 23:55:38'
+    modifiedAt: '2023-04-19 11:20:14'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F43199
@@ -1810,7 +1810,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-19 04:47:50'
+    modifiedAt: '2023-04-19 11:15:00'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
