JEKT-296 🔁 Modified     - Pipeline        - JDE_MD_PO_HIST_BW2_DEU_GMD_JEM_JES_JET_JSW_SJD     - Dataset        - MD_PO_HIST

--- a/src/datasets/MD_PO_HIST/pbt_aspects.yml
+++ b/src/datasets/MD_PO_HIST/pbt_aspects.yml
@@ -38,23 +38,7 @@ schema:
       mappings: []
       tags: []
   - name: MATL_MVMT_YR
-    type:
-      type: struct
-      fields:
-      - name: col1
-        type: string
-        nullable: true
-        metadata:
-          description: ''
-          mappings: []
-          tags: []
-      - name: col2
-        type: string
-        nullable: false
-        metadata:
-          description: ''
-          mappings: []
-          tags: []
+    type: integer
     nullable: true
     metadata:
       description: ''
@@ -89,23 +73,7 @@ schema:
       mappings: []
       tags: []
   - name: PSTNG_DTTM
-    type:
-      type: struct
-      fields:
-      - name: col1
-        type: string
-        nullable: true
-        metadata:
-          description: ''
-          mappings: []
-          tags: []
-      - name: col2
-        type: string
-        nullable: false
-        metadata:
-          description: ''
-          mappings: []
-          tags: []
+    type: timestamp
     nullable: true
     metadata:
       description: ''
@@ -280,13 +248,6 @@ schema:
       mappings: []
       tags: []
   - name: SEQ_NUM_OF_SUP_CNFRM
-    type: void
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: NUM_OF_DOC_COND
     type: void
     nullable: true
     metadata:
@@ -709,6 +670,13 @@ schema:
   - name: DAI_UPDT_DTTM
     type: timestamp
     nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: NUM_OF_THE_DOC_COND
+    type: void
+    nullable: true
     metadata:
       description: ''
       mappings: []
