--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -8270,6 +8270,30 @@ jobs:
     createdAt: '2023-04-06 21:07:36'
     modifiedAt: '2023-04-10 16:20:36'
     author: smille29@its.jnj.com
+  jobs/JOB_MD_SLS_ORDR_LINE:
+    name: JOB_MD_SLS_ORDR_LINE
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 ? * 7 *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines: []
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-19 13:29:27'
+    modifiedAt: '2023-04-19 13:30:43'
+    author: smille29@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
