--- a/src/datasets/DS_SAP_01_EBKE/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_EBKE/pbt_aspects.yml
@@ -548,6 +548,34 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: SGT_SCAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: WRF_CHARSTC1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: WRF_CHARSTC2
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: WRF_CHARSTC3
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
