--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -808,13 +808,14 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-17 19:33:05'
-    modifiedAt: '2023-04-20 13:06:38'
+    modifiedAt: '2023-04-20 13:20:39'
     datasets:
       inputs:
       - datasets/DS_SAP_01_T001K
       - datasets/DS_SAP_01_T001W
       - datasets/DS_SAP_01_T005T
-      outputs: []
+      outputs:
+      - datasets/MD_PLNT
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1828,7 +1829,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-20 13:20:39'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
