JEKT-296: unique pipeline for all SAP systems 🔁 Modified     - Pipeline        - SAP_MD_PO_HIST     - Dataset        - MD_PO_HIST

--- a/src/datasets/MD_PO_HIST/pbt_aspects.yml
+++ b/src/datasets/MD_PO_HIST/pbt_aspects.yml
@@ -367,7 +367,7 @@ schema:
       mappings: []
       tags: []
   - name: QTY3
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -409,7 +409,7 @@ schema:
       mappings: []
       tags: []
   - name: VAL_GOODS_RCPT_BLOK_STK
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -423,14 +423,14 @@ schema:
       mappings: []
       tags: []
   - name: GOODS_RCPT_BLOK_STK
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: QTY_IN_PAREL_UNIT_OF_MEAS
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -486,7 +486,7 @@ schema:
       mappings: []
       tags: []
   - name: EXCH_RT
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
@@ -500,28 +500,28 @@ schema:
       mappings: []
       tags: []
   - name: PSTD_SCTY_RETN_AMT
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PSTD_RETN_AMT_IN_DOC_CRNCY
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RETN_AMT_IN_CO_CD_CRNCY
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: RETN_AMT_IN_DOC_CRNCY
-    type: void
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
