🔁 JEKT-1367     - Pipeline        - SAP_01_MD_CUST     - Dataset        - MD_CUST

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -848,13 +848,14 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-15 17:35:18'
-    modifiedAt: '2023-04-20 15:30:51'
+    modifiedAt: '2023-04-20 15:38:53'
     datasets:
       inputs:
       - datasets/DS_SAP_01_KNA1
       - datasets/DS_SAP_01_T016T
       - datasets/DS_SAP_01_TVAST
-      outputs: []
+      outputs:
+      - datasets/MD_CUST
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_MD_SHIP_SVS:
@@ -1391,7 +1392,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-20 15:37:49'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
