JEKT-296 improve mapping for BBA & BBL 🔁 Modified     - Pipeline        - JDE_01_MD_PO_SCHED_LINE_DELV_JES_JEM_JET_JSW_MTR_SJD_DEU        - SAP_MD_PO_HIST     - Dataset        - MD_PO_HIST

--- a/src/datasets/MD_PO_HIST/pbt_aspects.yml
+++ b/src/datasets/MD_PO_HIST/pbt_aspects.yml
@@ -262,7 +262,7 @@ schema:
       mappings: []
       tags: []
   - name: TAX_RPTG_CTRY_REGN
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -346,21 +346,21 @@ schema:
       mappings: []
       tags: []
   - name: CHAR_VAL_1
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CHAR_VAL_2
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: CHAR_VAL_3
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -374,28 +374,28 @@ schema:
       mappings: []
       tags: []
   - name: FSHN_Theme
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: FSHN_CLCT
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SEASN
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: SEASN_YR
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -416,7 +416,7 @@ schema:
       mappings: []
       tags: []
   - name: TYPE_OF_PAREL_UNIT_OF_MEAS
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -444,42 +444,42 @@ schema:
       mappings: []
       tags: []
   - name: LOGL_SYS
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: UOM_FROM_SRVC_ENT_SHT
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: STK_SGMNT
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV_ITM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DELV
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: ORIG_OF_AN_INVC_ITM
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -493,7 +493,7 @@ schema:
       mappings: []
       tags: []
   - name: MLT_ACCT_ASGNMT
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
