JEKT-1341 Config creation & Duplicate Check Gems added 🔁 Modified     - Pipeline        - SAP_01_MD_PLNT

--- a/src/pipelines/SAP_01_MD_PLNT/pbt_aspects.yml
+++ b/src/pipelines/SAP_01_MD_PLNT/pbt_aspects.yml
@@ -1,5 +1,17 @@
 version: 1
 configurations:
-- default
+- GEU
+- FSN
 - ATL
+- MBP
+- BBA
+- BBL
+- P01
+- MRS
+- default
+- HCS
+- BBN
+- SVS
+- TAI
+- BWI
 dependencies: []
