JEKT-296 🔁 Modified     - Pipeline        - SAP_MD_PO_HIST     - Dataset        - MD_PO_HIST

--- a/src/datasets/MD_PO_HIST/pbt_aspects.yml
+++ b/src/datasets/MD_PO_HIST/pbt_aspects.yml
@@ -676,7 +676,7 @@ schema:
       tags: []
   - name: DAI_ETL_ID
     type: integer
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
