JEKT-136 - Modified added all Source Systems to Object Job     - Job        - JOB_MD_SLS_ORDR_LINE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -6378,14 +6378,29 @@ jobs:
       onStart: false
       onSuccess: false
       onFailure: false
-    pipelines: []
+    pipelines:
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE_hmd
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE_geu
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE_mrs
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE_ATL
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE_bwi
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE_bbn
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE_svs
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE_bba
+    - pipelines/JDE_MD_SLS_ORDR_LINE_
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE_TAI
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE_FSN
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE_hcs
+    - pipelines/MD_SLS_ORDR_LINE_MBP
+    - pipelines/SAP_01_MD_SLS_ORDR_LINE_P01
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: null
     createdAt: '2023-04-19 13:29:27'
-    modifiedAt: '2023-04-19 13:30:43'
+    modifiedAt: '2023-04-20 19:55:31'
     author: smille29@its.jnj.com
 functions:
   author: null
