JEKT-296 🔁 Modified     - Pipeline        - SAP_MD_PO_HIST_BBA_BBL_BBN_MBP_MRS_TAI_P01_HMD_GEU_HCS

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -873,14 +873,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/DART_L1_Purchase_Order_MD_PO_HIST:
-    name: SAP_MD_PO_HIST
+    name: SAP_MD_PO_HIST_BBA_BBL_BBN_MBP_MRS_TAI_P01_HMD_GEU_HCS
     description: ''
     author: jcacere7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-05 12:54:52'
-    modifiedAt: '2023-04-20 20:38:38'
+    modifiedAt: '2023-04-20 21:00:20'
     datasets:
       inputs:
       - datasets/DS_SAP_01_EBKE
