jenkins.yaml edited online with Bitbucket

--- a/_scm_jenkins/jenkins.yaml
+++ b/_scm_jenkins/jenkins.yaml
@@ -4,10 +4,10 @@
   # Job Creation details
   createJobsFrom:            # branches to create jenkins job from
       - development
-      - production
       - main
       - feature/*
       - test
+      - prod
   createJobsIncludeAuthors:  # create jobs for all users making commits to the repo
       - .*
   createJobsIgnoreAuthors:   # ignore creation of Jobs triggered by service account
@@ -26,7 +26,7 @@
       - bugfix/*
       - hotfix/*
       - development
-      - production
+      - prod
       - test
 
   triggerJobsIncludeAuthors:
@@ -45,12 +45,12 @@
         - development
         - pqa
         - qa
-        - production
         - test
         - beta
         - feature/*
         - bugfix/*
         - hotfix/*
+        - prod
         excludeBranches: # List of branches for which the Jenkins will skip job trigger - feature/neverBuild
         - feature/neverBuild
 
