environment-mapping.yaml edited online with Bitbucket

--- a/environment-mapping.yaml
+++ b/environment-mapping.yaml
@@ -10,7 +10,7 @@
   environment: 'test'
 - branchNamePattern: 'pqa'
   environment: 'PQA'
-- branchNamePattern: 'production'
+- branchNamePattern: 'prod'
   environment: 'PROD'
 - branchNamePattern: 'qa'
   environment: 'QA'
