JEKT-1341 Source Gems & Filter Gem created ❇️ New     - Dataset        - DS_JDE_01_F0116        - DS_JDE_01_F0006     - Pipeline        - JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -818,6 +818,22 @@ pipelines:
       - datasets/MD_PLNT
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD:
+    name: JDE_01_MD_PLNT_DEU_DJD_SJD_JEM_JSW_JET_JES_BW2_GMD
+    description: ''
+    author: mbolado1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-21 12:37:45'
+    modifiedAt: '2023-04-21 13:40:16'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_F0006
+      - datasets/DS_JDE_01_F0116
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -4494,6 +4510,36 @@ datasets:
         author: mbolado1@its.jnj.com
         createdAt: '2023-04-18 12:37:19'
         modifiedAt: '2023-04-18 12:37:19'
+  datasets/DS_JDE_01_F0006:
+    name: DS_JDE_01_F0006
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-04-21 13:21:54'
+    modifiedAt: '2023-04-21 13:21:54'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-04-21 13:21:54'
+        modifiedAt: '2023-04-21 13:21:54'
+  datasets/DS_JDE_01_F0116:
+    name: DS_JDE_01_F0116
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-04-21 13:24:54'
+    modifiedAt: '2023-04-21 13:24:55'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-04-21 13:24:54'
+        modifiedAt: '2023-04-21 13:24:54'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
