--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -826,12 +826,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-21 12:37:45'
-    modifiedAt: '2023-04-21 13:40:16'
+    modifiedAt: '2023-04-21 15:08:59'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0006
       - datasets/DS_JDE_01_F0116
-      outputs: []
+      outputs:
+      - datasets/MD_PLNT
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1845,7 +1846,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-20 13:20:39'
+    modifiedAt: '2023-04-21 15:08:59'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
