--- a/src/datasets/MD_CUST/pbt_aspects.yml
+++ b/src/datasets/MD_CUST/pbt_aspects.yml
@@ -1059,6 +1059,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: CNAE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: LEGAL_NATR
     type: string
     nullable: true
@@ -1109,7 +1116,7 @@ schema:
       mappings: []
       tags: []
   - name: MAX_STCK_HGHT_PKGNG_MATL
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
