--- a/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
@@ -3334,6 +3334,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: RTE_DESC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: DAI_ETL_ID
     type: integer
     nullable: false
