JEKT-1341 Pipeline for JDE MTR copied from JDE pipeline for other src sys ❇️ New     - Pipeline        - JDE_02_MD_PLNT_MTR
🔁 Modified
    - Dataset
       - MD_PLNT
       - DS_JDE_01_F0006
       - DS_JDE_01_F0116

--- a/src/datasets/DS_JDE_01_F0006/pbt_aspects.yml
+++ b/src/datasets/DS_JDE_01_F0006/pbt_aspects.yml
@@ -9,13 +9,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: MCSTYL
     type: string
     nullable: true
@@ -828,6 +821,27 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MCBPTP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MCAPSB
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MCTSBU
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
@@ -863,7 +877,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _infa_bigint_sequence_
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
