--- a/src/datasets/DS_JDE_01_F0116/pbt_aspects.yml
+++ b/src/datasets/DS_JDE_01_F0116/pbt_aspects.yml
@@ -9,13 +9,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: ALEFTB
     type: string
     nullable: true
@@ -142,6 +135,20 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: ALSYNCS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ALCAAD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
@@ -177,7 +184,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _infa_bigint_sequence_
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
