--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -835,6 +835,23 @@ pipelines:
       - datasets/MD_PLNT
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_02_MD_PLNT_MTR:
+    name: JDE_02_MD_PLNT_MTR
+    description: ''
+    author: mbolado1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-25 12:13:42'
+    modifiedAt: '2023-04-25 12:33:24'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_F0006
+      - datasets/DS_JDE_01_F0116
+      outputs:
+      - datasets/MD_PLNT
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -1846,7 +1863,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-21 15:08:59'
+    modifiedAt: '2023-04-25 12:33:24'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4516,7 +4533,7 @@ datasets:
     description: ''
     author: mbolado1@its.jnj.com
     createdAt: '2023-04-21 13:21:54'
-    modifiedAt: '2023-04-21 13:21:54'
+    modifiedAt: '2023-04-25 12:30:16'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -4531,7 +4548,7 @@ datasets:
     description: ''
     author: mbolado1@its.jnj.com
     createdAt: '2023-04-21 13:24:54'
-    modifiedAt: '2023-04-21 13:24:55'
+    modifiedAt: '2023-04-25 12:31:11'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
