JEKT-296 🔁 Modified     - Pipeline        - SAP_MD_PO_HIST_BBA_BBL_BBN_MBP_MRS_TAI_P01_HMD_GEU_HCS        - JDE_MD_PO_HIST_BW2_DEU_GMD_JEM_JES_JET_JSW_SJD     - Dataset        - MD_PO_HIST

--- a/src/datasets/MD_PO_HIST/pbt_aspects.yml
+++ b/src/datasets/MD_PO_HIST/pbt_aspects.yml
@@ -422,6 +422,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: GOODS_RCPT_BLOK_STK
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: QTY_IN_PAREL_UNIT_OF_MEAS
     type: void
     nullable: true
@@ -548,7 +555,21 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: VALUT_GOODS_RCPT_BLOK_STK
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: AMT_IN_DOC_CRNCY
+    type: void
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AMT_IN_LCL_CRNCY
     type: void
     nullable: true
     metadata:
@@ -660,16 +681,16 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _pk_
+  - name: _deleted_
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_UPDT_DTTM
-    type: timestamp
-    nullable: false
+  - name: _pk_
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -681,16 +702,9 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
-    type: string
+  - name: DAI_UPDT_DTTM
+    type: timestamp
     nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: AMT_IN_LCL_CRNCY
-    type: void
-    nullable: true
     metadata:
       description: ''
       mappings: []
