JEKT-1508 -🔁 Modified - Added new Pipelines to ATL and started to add for BBA     - Job        - ATL_PIPELINE_JOB        - BBA_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -6001,13 +6001,16 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_MD_DELV_LINE_FSN_GEU_HCS_MRS_P01_SVS_ATL
+    - pipelines/SAP_MD_MATL_INV_ATL
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 13:44:33'
-    modifiedAt: '2023-04-10 19:22:49'
+    modifiedAt: '2023-04-25 18:46:41'
     author: smille29@its.jnj.com
   jobs/DEV_BBA_PIPELINE_JOB:
     name: BBA_PIPELINE_JOB
@@ -6025,14 +6028,18 @@ jobs:
       onSuccess: false
       onFailure: false
     pipelines:
+    - pipelines/SAP_01_MD_BILL_DOC_HDR
+    - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
     - pipelines/SAP_01_MD_SER_NUM_STOCK_SGMNT
+    - pipelines/SAP_01_MD_SLS_DOC_PTNR_FUNC
+    - pipelines/SAP_MD_DELV_LINE_BBA_BBL_BBN
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:19:30'
-    modifiedAt: '2023-04-10 19:21:58'
+    modifiedAt: '2023-04-25 18:57:17'
     author: smille29@its.jnj.com
   jobs/DEV_BBL_PIPELINE_JOB:
     name: BBL_PIPELINE_JOB
